2010-09-21  Gary V. Vaughan  <gary@gnu.org>

	maint: edit-readme-alpha shouldn't try to re-edit during dist.
	* libltdl/config/edit-readme-alpha: If README is non-writable
	assume that it is being run from distcheck, and skip the edit
	with a warning (to help diagnose cases where the heuristic is
	not correct).  However, if README has already been edited to
	the alpha text, quietly skip without an error message.

2010-09-20  Eric Blake  <eblake@redhat.com>

	maint: drop autobuild requirement
	* HACKING: Update.

	build: ship autobuild.m4, to reduce bootstrap requirement
	* libltdl/m4/.gitignore: Drop autobuild.m4.
	* libltdl/m4/autobuild.m4: New file, copied from autobuild.
	* configure.ac (AB_INIT): Unconditionally call it.

2010-09-20  Peter Rosin  <peda@lysator.liu.se>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	libltdl: Make sure preloaded symbols are declared extern "C".
	* libltdl/ltdl.h (LTDL_SET_PRELOADED_SYMBOLS): Move the
	declaration of lt__PROGRAM__LTX_preloaded_symbols to global
	scope and make sure it has "C" linkage.  Makes exceptions.at
	succeed on MSVC.

2010-09-20  Peter Rosin  <peda@lysator.liu.se>

	tests: __declspec (dll{ex,im}port) in tests/exceptions.at
	* tests/exceptions.at (common.h, module.h, lib.h) [w32]: Use
	__declspec (dllimport) and __declspec (dllexport) instead of
	the less portable __attribute__ ((dllimport)) and
	__attribute__ ((dllexport)).  Makes the test compile on MSVC.

2010-09-19  Peter Rosin  <peda@lysator.liu.se>

	tests: Import items from liba1 for MSVC.
	* tests/lt_dlexit.at (b1.c) [MSVC]: Import function f1 and
	variable v1 from liba1 when using them from modb1.  Makes the
	test pass on MSVC.

2010-09-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	tests: avoid distcheck failure with --disable-ltdl-install.
	* tests/ltdl-libdir.at (libdir of installed modules): Skip if
	$LIBLTDL does not exist.

2010-09-18  Gary V. Vaughan  <gary@gnu.org>

	maint: use sed instead of maintaining 2 README files.