@@ -1,3 +1,14 @@
+2010-09-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Revert to per-language libpath computation on AIX.
+	* libltdl/m4/libtool.m4 (_LT_SYS_MODULE_PATH_AIX): Accept
+	tagname argument.  Use global cache variable lt_cv_aix_libpath
+	to override per-language tag variables for the libpath value.
+	Fix the sed script to remove trailing space.
+	(_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG): Pass tag argument to
+	_LT_SYS_MODULE_PATH_AIX.
+	Tracked down and reported by Rainer Tammer.
+
 2010-09-21  Gary V. Vaughan  <gary@gnu.org>
 
 	maint: edit-readme-alpha shouldn't try to re-edit during dist.
